# OGDB

./: CMakeLists.txt
lib/: globalStringStorage.cpp  globalStringStorage.h  node.cpp  node.h  page.h  property.cpp  property.h  relationship.h
tests/: README.md  test_GSS.cpp  test_node.cpp  test_page.cpp
